@@ -1,3 +1,8 @@
+2009-04-03  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime-repl.el (slime-inspector-mode-map): Add binding for M-RET.
+	(slime-inspector-copy-down-to-repl): Moved here from slime.el.
+
 2009-03-27  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-indentantion-fu.el (slime-indent-fu): Correctly deal with
